--- a/api/.env.example
+++ b/api/.env.example
@@ -11,3 +11,6 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/learning_platform
 # Application
 NODE_ENV=development
 PORT=4000
+
+# PostgREST URL (for development with docker-compose.dev.yml)
+POSTGREST_URL=http://127.0.0.1:3001
