--- a/ui/.env.example
+++ b/ui/.env.example
@@ -1,2 +1,3 @@
 VITE_DEEPSEEK_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 VITE_DEEPSEEK_API_URL=https://api.deepseek.com/v1/chat/completions
+VITE_API_URL=http://localhost:8000
