--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -15,6 +15,7 @@ services:
         volumes:
             - postgres_data:/var/lib/postgresql/data
             - ./resources/db/init:/docker-entrypoint-initdb.d
+            - ./postgresql.conf:/var/lib/postgresql/data/postgresql.conf
         healthcheck:
             test: ["CMD-SHELL", "pg_isready -U postgres"]
             interval: 10s
