--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -3,7 +3,7 @@
 
 services:
     postgres:
-        image: postgres:16-alpine
+        image: postgres:16
         container_name: learning-platform-db
         restart: unless-stopped
         environment:
@@ -24,7 +24,7 @@ services:
             - internal
 
     postgrest:
-        image: postgrest/postgrest:latest
+        image: postgrest/postgrest:v14.1
         container_name: learning-platform-postgrest
         restart: unless-stopped
         # NO PORT MAPPING - Only accessible within Docker network (Production)
