--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -31,7 +31,7 @@ services:
         expose:
             - "3000" # Exposed to internal network only, NOT to host
         environment:
-            PGRST_DB_URI: postgres://postgres:api_user@postgres:5432/learning_platform
+            PGRST_DB_URI: postgres://api_user:postgres@postgres:5432/learning_platform
             PGRST_DB_ANON_ROLE: postgres
             PGRST_DB_SCHEMA: public
             PGRST_OPENAPI_SERVER_PROXY_URI: http://localhost:3000
