--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -11,7 +11,7 @@ services:
             POSTGRES_PASSWORD: postgres
             POSTGRES_DB: learning_platform
         ports:
-            - "5432:5432"
+            - "5458:5432"
         volumes:
             - postgres_data:/var/lib/postgresql/data
             - ./resources/db/init:/docker-entrypoint-initdb.d
@@ -31,8 +31,8 @@ services:
         expose:
             - "3000" # Exposed to internal network only, NOT to host
         environment:
-            PGRST_DB_URI: postgres://api_user:postgres@postgres:5432/learning_platform
-            PGRST_DB_ANON_ROLE: web_anon
+            PGRST_DB_URI: postgres://postgres:postgres@postgres:5432/learning_platform
+            PGRST_DB_ANON_ROLE: postgres
             PGRST_DB_SCHEMA: public
             PGRST_OPENAPI_SERVER_PROXY_URI: http://localhost:3000
             PGRST_SERVER_PORT: 3000
