fix: db user name

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -52,7 +52,7 @@ services:
             DB_HOST: postgres
             DB_PORT: 5432
             DB_NAME: learning_platform
-            DB_USER: api_user
+            DB_USER: postgres
             DB_PASSWORD: postgres
             POSTGREST_URL: http://learning-platform-postgrest:3000
             PORT: 4000
