--- a/ui/package.json
+++ b/ui/package.json
@@ -45,6 +45,7 @@
         "cmdk": "^1.1.1",
         "embla-carousel-react": "^8.6.0",
         "input-otp": "^1.4.2",
+        "katex": "^0.16.25",
         "lucide-react": "^0.487.0",
         "mammoth": "^1.11.0",
         "next-themes": "^0.4.6",
@@ -58,8 +59,10 @@
         "react-resizable-panels": "^2.1.7",
         "react-router-dom": "^7.9.4",
         "recharts": "^2.15.2",
+        "rehype-katex": "^7.0.1",
         "remark-breaks": "^4.0.0",
         "remark-gfm": "^4.0.1",
+        "remark-math": "^6.0.0",
         "sonner": "^2.0.3",
         "tailwind-merge": "*",
         "vaul": "^1.1.2"
